# game_time_limiter

./: LICENSE  Main.py  __init__.py  cli.py  config.json  persistence.py  pyproject.toml  usage.json  utils.py
game_time_limiter/: cli.py  gui_app.py  monitor.py  notifier.py  persistence.py  process_utils.py  service.py
game_time_limiter/gui/: app.py
