# pyproject.toml ─ definiciones de empaquetado y metadatos
# =======================================================

###############################
# Backend de construcción PEP 517
###############################
[build-system]
requires = ["setuptools>=68", "wheel"]  # qué necesita pip para compilar
build-backend = "setuptools.build_meta" # backend clásico con setuptools

###############################
# Metadatos del proyecto PEP 621
###############################
[project]
name = "game-time-limiter"              # nombre en PyPI (slug, sin espacios)
version = "0.7.0"                       # sincronízalo con tu changelog
description = "Limita el tiempo diario de juego en Steam (Windows)"
readme = "README.md"                    # se muestra en PyPI
authors = [{ name = "Carlos Zottola" }] 
license = { text = "MIT" }              # o la que elijas
requires-python = ">=3.10"

# Dependencias que instalará pip
dependencies = [
    "psutil",
    # win10toast solo es necesario en Windows; la marca de entorno evita que
    # pip lo intente instalar en Linux/macOS.
    "win10toast; sys_platform == 'win32'",
    "pyside6",
    "qdarkstyle",
]

#####################################
# Scripts instalables en la línea de comandos
#####################################
[project.scripts]
# Tras `pip install .` se crea un ejecutable `game-time-limiter`
game-time-limiter = "game_time_limiter.cli:main"

#####################################
# Dependencias opcionales (dev)
#####################################
[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
]

#####################################
# Configuración de herramientas (ejemplos)
#####################################
[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
python_files = ["tests_*.py", "*_tests.py"]